DBTOOLS-1632 added loader.jdbc javadocs